# advent-of-code-2025

./: .gitignore  LICENSE  advent-of-code2025.cabal  cabal.project  cabal.project.old  egGraph.dot
app/: Main.hs
src/: AoCPrelude.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  DayTemplate.hs
