cabal-version:      3.0
name:               advent-of-code2025
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Jessica Foster
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  AoCPrelude,
                      Day1,
                      Day2,
                      Day3,
                      Day4,
                      Day5,
                      Day6
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0,
                      containers,
                      flow,
                      string-interpolate,
                      yoda
    hs-source-dirs:   src
    ghc-options: -ddump-simpl -dsuppress-idinfo -dsuppress-module-prefixes -ddump-splices
    default-language: Haskell2010
